Bug #33148 falcon mysqldump does not include tablespace info
Submitted: 11 Dec 2007 19:48 Modified: 15 May 15:11
Reporter: jey Razack
Status: Closed
Category:Server: Falcon Severity:S3 (Non-critical)
Version:6.0.3-alpha, 6.0-BK OS:Linux (RHEL 4)
Assigned to: Sergey Vojtovich Target Version:
Tags: mysqldump, falcon, F_TABLESPACE
Triage: Triaged: D3 (Medium) / R3 (Medium) / E4 (High)

[11 Dec 2007 19:48] jey Razack
Description:
mysqldump with --skip-opt option truncates the tablespace clause.

 /*!50100 TABLESPACE mytablespace */

Also I don't see an option to dump 'CREATE TABLESPACE ...' statements.

How to repeat:
mysqldump --user=root -p --all-tablespaces --create-options=true --skip-opt mydb >
mydb.dmp
[1 Feb 2008 0:08] Sveta Smirnova
Thank you for the report.

Verified as described.

cat bug31148.test:
CREATE TABLESPACE tablespace
    ADD DATAFILE 'file'
    ENGINE = Falcon;
	
create table t1(id int) engine=falcon;

insert into t1 values(1);

--exec $MYSQL_DUMP --all-tablespaces test
--exec $MYSQL_DUMP --skip-opt test
--exec $MYSQL_DUMP test
[12 Dec 2008 12:58] Sergey Vojtovich
mysqldump --skip-opt sets NO_TABLE_OPTIONS flag in SQL_MODE
(http://dev.mysql.com/doc/refman/6.0/en/server-sql-mode.html#sqlmode_no_table_options):

Do not print MySQL-specific table options (such as ENGINE) in the output of SHOW CREATE
TABLE. This mode is used by mysqldump in portability mode. 

Won't fix this issue within the scope of this bug.
[15 Dec 2008 15:48] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/61680

2934 Sergey Vojtovich	2008-12-15
      BUG#33148 - falcon mysqldump does not include tablespace info
      
      mysqldump didn't include tablespace definition when dumping
      Falcon tables, that use custom tablespaces.
      
      With this fix Falcon tablespace definition is dumped.
[17 Dec 2008 15:12] Alexander Barkov
The patch looks fine for me.
[18 Dec 2008 9:32] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/61937

2934 Sergey Vojtovich	2008-12-18
      BUG#33148 - falcon mysqldump does not include tablespace info
      
      mysqldump didn't include tablespace definition when dumping
      Falcon tables, that use custom tablespaces.
      
      With this fix Falcon tablespace definition is dumped.
[13 Feb 8:25] Bugs System
Pushed into 6.0.10-alpha (revid:alik@sun.com-20090211182317-uagkyj01fk30p1f8) (version
source revid:hky@sun.com-20081218223730-ujuygclo2fezfurq) (merge vers: 6.0.9-alpha)
(pib:6)
[15 May 15:11] MC Brown
An entry has been added to the 6.0.10 changelog: 

The mysqldump command would not include the TABLESPACE information for Falcon tables
within the dump information.